# Projects_novaaj

./: .env.example  .gitignore  Makefile  README.md  TOOLS.md  USER.md  _quarto.yml  bharat-market-pulse-learnings.qmd  index.qmd  pyproject.toml
.github/workflows/: python-ci.yml  quarto-render.yml
docs/: _quarto.yml  architecture.qmd  bharat-market-pulse-learnings.qmd  bharat_market_pulse_learnings.md  index.qmd  limitations.qmd  quickstart.md  quickstart.qmd
project_templates/qmd_starter/: README.md
projects/bharat_market_pulse/: .env.example  README.md  agent_extracted_holdings.example.json  analyzer.py  config.py  data_fetcher.py  error_log.txt  export_utils.py  ocr_engine.py  report_pipeline.py  requirements.txt  scheduler_example.cron  telegram_formatter.py
projects/indian_market_intelligence/: .env.example  README.md  config.py  data_fetcher.py  ocr_engine.py  report_pipeline.py  requirements.txt  scheduler_example.cron  telegram_formatter.py
python/bharat_market_pulse/: agent_extractor.py  config.py  llm_extractor.py  news_collector.py  ocr_engine.py  requirements.txt  sandbox_pipeline.py  swarm_engine.py  telegram_formatter.py
src/bharat_market_pulse/: __init__.py  agent_extractor.py  analyzer.py  config.py  data_fetcher.py  error_log.txt  export_utils.py  llm_extractor.py  news_collector.py  ocr_engine.py  report_pipeline.py  sandbox_pipeline.py  sanity_check.py  swarm_engine.py  (+1 more)
src/bharat_market_pulse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_analyzer.py  test_config.py  test_pipeline.py  test_report_pipeline.py
(+16 files in other folders)
